Bug #54381 --> add <BODY> tag to the unknown decoder's attempt to figure out if content is html or not. r=gagan, sr=rpotts